# PyUPC-EAN

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .landscape.yaml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  httpd.py  phpcatfile.php  py2pkg-gen.sh  py3pkg-gen.sh  pycatfile.py  pypkg-gen.py  pyproject.toml  pyverinfo.py  setup  setup.cfg  setup.py  setupalt  upc  upc-demo.py  upc-old.py  upc-ui.py  upc.bat  upc.py  upcean.ini
.github/workflows/: pythonpackage.yml
examples/: GUI-example-Kivy.py  GUI-example-Linux.py  GUI-example-MacOS.py  GUI-example-Windows.py  barcodes.xml  httpd.bat  httpd.py  upc-demo  upc-demo.bat  upc-demo.py  upc-example.py  upc-httpd.py  upc-json.py  upc-kivy.py  upc-old.py  upc-pygame.py  upc-pygame2.py  upc-pysdl2.py  upc-test-sheet.py  upc-test.py  upc-ui-kivy.py  upc-ui-neo.py  upc-ui.bat  upc-ui.py  upc-xml.py  upc.bat  upc.py  upca-test-sheet.py
upcean/: __init__.py  __main__.py  barcode.py  barcodes.dtd  codabar.py  code11.py  code39.py  code93.py  convert.py  downloader.py  ean13.py  ean2.py  ean5.py  ean8.py  functions.py  gdlib.py  getprefix.py  getsfname.py  itf.py  itf14.py  msi.py  oopfuncs.py  precairo.py  prepil.py  shortcuts.py  stf.py  support.py  svgcreate.py  upca.py  upce.py  upcean.ini  validate.py  versioninfo.py
upcean-cairo/: MANIFEST.in  httpd.py  setup  setup.py  upc-ui.py
upcean-pil/: LICENSE  MANIFEST.in  httpd.py  setup  setup.py  upc  upc-ui.py
upctest-cairo/: LICENSE  Makefile  httpd  httpd.py  setup  setup.py  upc  upc-ui  upc-ui.bat  upc-ui.py  upc.bat  upc.py
upctest-pil/: Makefile  httpd  httpd.bat  httpd.py  setup  setup.py  upc  upc-ui  upc-ui.py  upc.bat  upc.py
(+315 files in other folders)
