[project]
    name = "PyUPC-EAN"
    version = "2.20.2"
    readme = "README.md"
    license = { text = "BSD-3-Clause" }
    keywords = []
    description = "A barcode library/module for python."
    authors = [
        { name = "Kazuki Przyborowski", email = "kazuki.przyborowski@gmail.com" },
    ]
    